--- a/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
@@ -16,12 +16,18 @@
         style="display: flex; align-items: center; justify-content: center; height: 100px;display: none; transition: all ease-in 1s;">
         <p style="font-size: 20px; font-weight: 800;">Search: <input
                 style="border: 1px solid #808080; padding: 15px 0px;width: 25vw; border-radius: 5px 0px 0px 5px;"
-                type="search" placeholder="Search for product"></p>
+                type="search" id="search" placeholder="Search for product"></p>
         <a href="/lunch"><i style="border: 1px solid gray; padding: 14.5px 15px; margin-right: 20px;"
                 class="fa-solid fa-magnifying-glass"></i></a>
-        <a id="searbtn2" href="#"
+        <!-- <a id="searbtn2" href="#"
             style="text-decoration: none; color: #111; font-size: 20px; border-left: 0.5px solid gray; padding: 10px 0px; font-weight: 800;">
-            <i class="fa-solid fa-xmark"></i>Search</a>
+            <i class="fa-solid fa-xmark"></i>Search</a> -->
+
+            <a id="searbtn2" href="#"
+                style="text-decoration: none; color: #111; font-size: 20px; border-left: 0.5px solid gray; padding: 10px 0px; font-weight: 800;">
+                <i class="fa-solid fa-xmark"></i><button id="searchButton"
+                    style="border: none; font-size: 1vw; background-color: transparent;"
+                    type="submit">Search</button></a>
     </div>
     <header class="navbar">
         <div class="part1">
