--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/eveningProduct.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/eveningProduct.css
@@ -22,6 +22,54 @@ body::-webkit-scrollbar-thumb{
     border-radius: 50px;
 }
 
+/* 
+h4{
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    background-color: aquamarine;
+}
+
+.navbar{
+    height: 100px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: sticky;
+    top:0;
+    z-index: 99;
+    background-color: #fff;
+}
+
+
+.navbar .part1 a{
+    color: #111;
+
+}
+
+
+.navbar .part2{
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+.navbar .part2 a{
+    color: #111;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+
+.navbar .part2 #group{
+    display: flex;
+    text-align: start;
+    align-items: center;
+    gap: 10px;
+} */
+
+
 
 .page1{
     text-align: center;
@@ -237,6 +285,37 @@ body::-webkit-scrollbar-thumb{
         height: 35vw;
         width: 35vw;
     }
+
+/* 
+
+    h4{
+        width: 100%;
+        text-align: center;
+        font-size: 3vw;
+        background-color: aquamarine;
+    }
+
+    #svg1{
+        height: 11vw;
+        width: 11vw;
+    }
+
+
+    .navbar .part2{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .navbar .part2 a{
+        font-size: 3.5vw;
+        
+    }
+
+    #group2{
+        margin-right: -7px;
+    } */
    
   
 }
