--- a/backend/pratise backend/practice project pin/pin/views/eveningProduct.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/eveningProduct.ejs
@@ -1,29 +1,10 @@
 
-
-    <% include ./partial/cHeader.ejs %>
+    
+        <% include ./partial/cHeader.ejs %>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
             integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="/stylesheets/eveningProduct.css">
-
-
-        <!-- serchbar  -->
-        <div class="searbar"
-            style="display: flex; align-items: center; justify-content: center; height: 100px;display: none; transition: all ease-in 1s;">
-
-            <!-- <form style="display: flex; align-items: center;" action="/Afternoon/search" method="post"> -->
-            <p style="font-size: 20px; font-weight: 800;">Search: <input
-                    style="border: 1px solid #808080; padding: 15px 0px;width: 25vw; border-radius: 5px 0px 0px 5px;"
-                    type="text" id="search" placeholder="Search for product" autocomplete="off"></p>
-            <i style="border: 1px solid gray; padding: 14.5px 15px; margin-right: 20px;"
-                class="fa-solid fa-magnifying-glass"></i>
-            <a id="searbtn2" href="#"
-                style="text-decoration: none; color: #111; font-size: 20px; border-left: 0.5px solid gray; padding: 10px 0px; font-weight: 800;">
-                <i class="fa-solid fa-xmark"></i><button id="searchButton"
-                    style="border: none; font-size: 1vw; background-color: transparent;"
-                    type="submit">Search</button></a>
-            <!-- </form> -->
-        </div>
 
 
         <!-- pages -->
@@ -92,5 +73,5 @@
         </div>
 
 
-        <script src="/javascripts/eveningProducts.js"></script>
+        <!-- <script src="/javascripts/eveningProducts.js"></script> -->
         <% include ./partial/cFooter.ejs %>
