modify code in awared web

--- a/backend/pratise backend/practice project pin/pin/views/lunch.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/lunch.ejs
@@ -6,21 +6,6 @@
 
 
 
-    <!-- serachbar  -->
-    <div class="searbar"
-        style="display: flex; align-items: center; justify-content: center; height: 100px;display: none; transition: all ease-in 1s;">
-        <p style="font-size: 20px; font-weight: 800;">Search: <input
-                style="border: 1px solid #808080; padding: 15px 0px;width: 25vw; border-radius: 5px 0px 0px 5px;"
-                type="search" id="Search" placeholder="Search for product"></p>
-        <i style="border: 1px solid gray; padding: 14.5px 15px; margin-right: 20px;"
-            class="fa-solid fa-magnifying-glass"></i>
-        <a id="searbtn2" href="#"
-            style="text-decoration: none; color: #111; font-size: 20px; border-left: 0.5px solid gray; padding: 10px 0px; font-weight: 800;">
-            <i class="fa-solid fa-xmark"></i>Search</a>
-    </div>
-
-
-
     <!--lunch product pages -->
     <div class="page1">
         <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg"
@@ -39,7 +24,7 @@
                 <a style="text-decoration: none; font-weight:800;color: #111;" href="/Afternoon">
                     <h1>Afternoon</h1>
                 </a>
-                <a style="text-decoration: none; font-weight:800;color: #111;" href="/evening">
+                <a style="text-decoration: none; font-weight:800;color: #111;" href="/evining">
                     <h1>Evening</h1>
                 </a>
             </div>
