--- a/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
@@ -19,15 +19,11 @@
                 type="search" id="search" placeholder="Search for product"></p>
         <a href="/lunch"><i style="border: 1px solid gray; padding: 14.5px 15px; margin-right: 20px;"
                 class="fa-solid fa-magnifying-glass"></i></a>
-        <!-- <a id="searbtn2" href="#"
-            style="text-decoration: none; color: #111; font-size: 20px; border-left: 0.5px solid gray; padding: 10px 0px; font-weight: 800;">
-            <i class="fa-solid fa-xmark"></i>Search</a> -->
 
-            <a id="searbtn2" href="#"
-                style="text-decoration: none; color: #111; font-size: 20px; border-left: 0.5px solid gray; padding: 10px 0px; font-weight: 800;">
-                <i class="fa-solid fa-xmark"></i><button id="searchButton"
-                    style="border: none; font-size: 1vw; background-color: transparent;"
-                    type="submit">Search</button></a>
+        <a id="searbtn2" href="#"
+            style="text-decoration: none; color: #111; font-size: 20px; border-left: 0.5px solid gray; padding: 10px 0px; font-weight: 800;">
+            <i class="fa-solid fa-xmark"></i><button id="searchButton"
+                style="border: none; font-size: 1vw; background-color: transparent;" type="submit">Search</button></a>
     </div>
     <header class="navbar">
         <div class="part1">
@@ -76,9 +72,9 @@
         <div class="part2">
             <a href="/">Home</a>
             <a href="/bespoke">Bespoke Event</a>
-            <!-- <div id="group"> -->
-                <a id="group" href="/group-order"><i class="fa-solid fa-users-line" id="group2"></i>group Order</a>
-            <!-- </div> -->
+
+            <a id="group" href="/group-order"><i class="fa-solid fa-users-line" id="group2"></i>group Order</a>
+
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
             <a href="/log-register"><i class="fa-solid fa-user-plus"></i></a>
 
