--- a/backend/pratise backend/practice project pin/pin/views/stories.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/stories.ejs
@@ -1,104 +1,121 @@
 <% include ./partial/header.ejs %>
     <link rel="stylesheet" href="/stylesheets/stories.css">
 
-    <div class="page1">
-        <div class="card">
-            <h1 style="font-size: 11vw; letter-spacing: 1px;">STORIES</h1>
+
+    <div id="main">
+
+
+        <div class="page1">
+            <div class="card">
+                <h1 style="font-size: 11vw; letter-spacing: 1px;">STORIES</h1>
+            </div>
+            <div class="card2">
+                <h5 class="stories">The narrative of Two Good Co is far
+                    reaching. Here, you will find many different voices; we can’t tell our story without telling theirs.
+                    Every perspective adds another dimension to who we are and what we mean to the world.</h5>
+                <h5 class="showall"><span>FILTER</span>
+                    SHOW ALL <span><i class="ri-arrow-down-line"></i></span>
+                </h5>
+            </div>
         </div>
-        <div class="card2">
-            <h5 class="stories">The narrative of Two Good Co is far
-                reaching. Here, you will find many different voices; we can’t tell our story without telling theirs.
-                Every perspective adds another dimension to who we are and what we mean to the world.</h5>
-            <h5 class="showall"><span>FILTER</span>
-                SHOW ALL <span><i class="ri-arrow-down-line"></i></span>
-            </h5>
+
+        <div class="page2">
+            <div class="main">
+                <div class="card1">
+                    <div class="storyimg">
+                        <div class="storycardtext">
+                            <h4>writing by xyz <span>20-march-2024</span></h4>
+                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                                necessitatibus ex odio,
+                                provident
+                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card1">
+                    <div class="storyimg">
+                        <div class="storycardtext">
+                            <h4>writing by xyz <span>20-march-2024</span></h4>
+                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                                necessitatibus ex odio,
+                                provident
+                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card1">
+                    <div class="storyimg">
+                        <div class="storycardtext">
+                            <h4>writing by xyz <span>20-march-2024</span></h4>
+                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                                necessitatibus ex odio,
+                                provident
+                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="largeimg">
+                <div class="card1">
+                    <div class="storyimg">
+                        <div class="storycardtext">
+                            <h4>writing by xyz <span>20-march-2024</span></h4>
+                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                                necessitatibus ex odio,
+                                provident
+                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="card1">
+                    <div class="storyimg">
+                        <div class="storycardtext">
+                            <h4>writing by xyz <span>20-march-2024</span></h4>
+                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                                necessitatibus ex odio,
+                                provident
+                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="main">
+                <div class="card1">
+                    <div class="storyimg">
+                        <div class="storycardtext">
+                            <h4>writing by xyz <span>20-march-2024</span></h4>
+                            <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                                necessitatibus ex odio,
+                                provident
+                                obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
+
     </div>
 
-    <div class="page2">
-        <div class="main">
-            <div class="card1">
-                <div class="storyimg">
-                    <div class="storycardtext">
-                        <h4>writing by xyz <span>20-march-2024</span></h4>
-                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-                            necessitatibus ex odio,
-                            provident
-                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="main">
-            <div class="card1">
-                <div class="storyimg">
-                    <div class="storycardtext">
-                        <h4>writing by xyz <span>20-march-2024</span></h4>
-                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-                            necessitatibus ex odio,
-                            provident
-                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="main">
-            <div class="card1">
-                <div class="storyimg">
-                    <div class="storycardtext">
-                        <h4>writing by xyz <span>20-march-2024</span></h4>
-                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-                            necessitatibus ex odio,
-                            provident
-                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="largeimg">
-            <div class="card1">
-                <div class="storyimg">
-                    <div class="storycardtext">
-                        <h4>writing by xyz <span>20-march-2024</span></h4>
-                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-                            necessitatibus ex odio,
-                            provident
-                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="main">
-            <div class="card1">
-                <div class="storyimg">
-                    <div class="storycardtext">
-                        <h4>writing by xyz <span>20-march-2024</span></h4>
-                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-                            necessitatibus ex odio,
-                            provident
-                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="main">
-            <div class="card1">
-                <div class="storyimg">
-                    <div class="storycardtext">
-                        <h4>writing by xyz <span>20-march-2024</span></h4>
-                        <h1 class="textName">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-                            necessitatibus ex odio,
-                            provident
-                            obcaecati nobis nisi. Assumenda dicta doloribus natus.</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-    </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"
+        integrity="sha512-1PKqXBz2ju2JcAerHKL0ldg0PT/1vr3LghYAtc59+9xy8e19QEtaNUyt1gprouyWnpOPqNJjL4gXMRMEpHYyLQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="/javascripts/stories.js"></script>
     <% include ./partial/footer.ejs %>
